# discord-to-telegram-messages-resender

./: Cargo.toml
docker/: build.dockerfile
src/: config.rs  main.rs  utils.rs
src/commands/: add_game.rs  copy_message.rs  create_message.rs  delete_game.rs  mod.rs
