[package]
name = "discord-to-telegram-messages-resender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "time"] }
serenity = "0.12.1"
reqwest = { version = "0.11.23", features = ["json"] }
